test/libsolidity/syntaxTests/nameAndTypeResolution/088_double_event_declaration_ignores_anonymous.sol
contract test {
    event A(uint i);
    event A(uint i) anonymous;
}
// ----
// DeclarationError: (20-36): Event with same name and arguments defined twice.
